--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-form-field",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "React hooks based form store library",
   "main": "dist/index.js",
   "dependencies": {
@@ -16,6 +16,7 @@
     "@babel/plugin-transform-runtime": "^7.7.5",
     "@babel/preset-env": "^7.7.5",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "confusing-browser-globals": "^1.0.9",
     "eslint": "^6.7.2",
     "eslint-config-react-app": "^5.1.0",
@@ -25,7 +26,7 @@
     "eslint-plugin-react-hooks": "^2.3.0"
   },
   "scripts": {
-    "build": "npx babel src --out-dir dist",
+    "build": "npx cross-env NODE_ENV=production babel src --out-dir dist",
     "start": "npx babel src --watch --out-dir dist"
   },
   "repository": {
